--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <div
         id="container1">
         <img
-            id="logo-icon"
+            id="logo_icon"
             src="./assets/logo.svg" 
             alt="failed loaded logo"
             width="389px"
             height="94px">
         <div
-            id="camp1-text1">
+            id="camp1_text1">
             <p id="title">
                 <strong>atualize ideias e informações em 5 minutos.</strong>
             </p>
@@ -45,10 +45,10 @@
         </div>
     
         <div
-            id="camp2-form">
+            id="camp2_form">
             <form 
             action=""
-            id="insert-email">
+            id="insert_email">
             <div
                 id="input">
                 <p style="color: #A8A8A8;;">
@@ -56,12 +56,12 @@
                 </p>
                 <input 
                     style="width: 655px; height: 48px; border: 0px;"
-                    id="camp-email"
+                    id="camp_email"
                     type="email"
                     placeholder="al@rocketseat.com">
                 <button 
                     style="width: 48px; height: 50px; background-color: #8257E5; border: 0px;"
-                    id="button-input"
+                    id="button_input"
                     >
                     <img
                         width="24px"
@@ -74,12 +74,12 @@
         </div>
 
         <div
-            id="camp3-rodape">
+            id="camp3_rodape">
             <a
-            id="text-rodape">
+            id="text_rodape">
             <strong>deixe-me ler primeiro</strong>
             <img
-                id="icon-rodape" 
+                id="icon_rodape" 
                 src="./assets/arrow-right.svg" 
                 alt="failed loaded arrow"
                 width="24px"
@@ -89,7 +89,7 @@
     </div>
 
     <img 
-        id="image-background"    
+        id="image_background"    
         src="./assets/read_news.jpg" 
         alt="failed loaded"
         width="1175px"
